# MultiLabel_N24

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA.ipynb  classifier-baseline.ipynb  data_cleaning.ipynb  ollama_experiment.ipynb
notebooks/category_clf_v1/: classifier-baseline.ipynb  roberta_preprocessor.ipynb  trainer.ipynb
notebooks/data_exploration/: EDA.ipynb
notebooks/llm_categoryclf/: ollama_experiment.ipynb
plans/: ArticleRec.md  NewsClf.md
scripts/: news-classifier.py
src/: __init__.py
src/preprocess/: __init__.py  roberta_preprocessor.py
src/utils/: data.py
